--- a/explanation.html
+++ b/explanation.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <!--repeated top of page info-->
-      <h1>Explanation Page djsdgj</h1>
+      <h1>Explanation Page 1</h1>
     </header>
     <nav>
       <!--repeated navigation here, may also move to header-->
