--- a/explanation.html
+++ b/explanation.html
@@ -10,7 +10,13 @@
   <body>
     <header>
       <!--repeated top of page info-->
-      <h1>Explanation Page</h1>
+      <h1>How to Make the Ultimate Fudgy Browny</h1>
+      <p>
+        Get ready to bake the <strong>most decadent brownies</strong> you've
+        ever tasted! This recipe uses the
+        <abbr title="Fat And Sugar Together">F.A.S.T.</abbr> method to ensure
+        your brownies are tasty and fudgy.
+      </p>
     </header>
     <nav>
       <!--repeated navigation here, may also move to header-->
