--- a/explanation.html
+++ b/explanation.html
@@ -17,6 +17,17 @@
         <abbr title="Fat And Sugar Together">F.A.S.T.</abbr> method to ensure
         your brownies are tasty and fudgy.
       </p>
+      <h2>Ingredients</h2>
+      <p></p>
+      <ul>
+        <li>1 cup unsalted butter</li>
+        <li>2 cups granulated sugar</li>
+        <li>4 large eggs</li>
+        <li>1 teaspoon vanilla extract</li>
+        <li>1 cup all-purpose flour</li>
+        <li>1 cup cocoa powder</li>
+        <li>1/2 teaspoon salt</li>
+      </ul>
     </header>
     <nav>
       <!--repeated navigation here, may also move to header-->
