--- a/explanation.html
+++ b/explanation.html
@@ -12,22 +12,17 @@
       <!--repeated top of page info-->
       <h1>How to Make the Ultimate Fudgy Browny</h1>
       <p>
-        Get ready to bake the <strong>most decadent brownies</strong> you've
-        ever tasted! This recipe uses the
+        Get ready to bake the <strong>most delicious brownies</strong> you've
+        ever had! This recipe uses the
         <abbr title="Fat And Sugar Together">F.A.S.T.</abbr> method to ensure
-        your brownies are tasty and fudgy.
+        your brownies are something everyone will enjoy.
       </p>
       <h2>Ingredients</h2>
-      <p></p>
-      <ul>
-        <li>1 cup unsalted butter</li>
-        <li>2 cups granulated sugar</li>
-        <li>4 large eggs</li>
-        <li>1 teaspoon vanilla extract</li>
-        <li>1 cup all-purpose flour</li>
-        <li>1 cup cocoa powder</li>
-        <li>1/2 teaspoon salt</li>
-      </ul>
+      <p>
+        You will need 2 eggs, water, powdered sugar, unsweetened cocoa powder,
+        canola oil, and vanilla extract
+      </p>
+      <h2>Procedures</h2>
     </header>
     <nav>
       <!--repeated navigation here, may also move to header-->
