--- a/explanation.html
+++ b/explanation.html
@@ -20,9 +20,19 @@
       <h2>Ingredients</h2>
       <p>
         You will need 2 eggs, water, powdered sugar, unsweetened cocoa powder,
-        canola oil, and vanilla extract
+        canola oil, chocolate chips, granulated sugar, all-purpose flour,
+        saltand vanilla extract
       </p>
-      <h2>Procedures</h2>
+      <h2>How to Make Brownies from Scratch</h2>
+      <p>
+        <li>
+          First, mix together the dry and wet ingredients in two separate bowls.
+          Combine the sugar, flour, powdereed sugar, cocoa powder, chocolate
+          chips, and salt in a medium bowl. Then, whisk together the eggs, olive
+          oil, and water in a large one
+        </li>
+        <li>Secondly, combine both wet and dry ingredients.</li>
+      </p>
     </header>
     <nav>
       <!--repeated navigation here, may also move to header-->
