--- a/explanation.html
+++ b/explanation.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <!--repeated top of page info-->
-      <h1>How to Make the Ultimate Fudgy Browny</h1>
+      <h1>How to Make the <strong>Ultimate</strong> Fudgy Browny</h1>
       <p>
         Get ready to bake the <strong>most delicious brownies</strong> you've
         ever had! This recipe uses the
@@ -24,7 +24,8 @@
         saltand vanilla extract
       </p>
       <h2>How to Make Brownies from Scratch</h2>
-      <p>
+      <p></p>
+      <ul>
         <li>
           First, mix together the dry and wet ingredients in two separate bowls.
           Combine the sugar, flour, powdereed sugar, cocoa powder, chocolate
@@ -32,7 +33,7 @@
           oil, and water in a large one
         </li>
         <li>Secondly, combine both wet and dry ingredients.</li>
-      </p>
+      </ul>
     </header>
     <nav>
       <!--repeated navigation here, may also move to header-->
