--- a/explanation.html
+++ b/explanation.html
@@ -27,13 +27,20 @@
       <p></p>
       <ul>
         <li>
-          First, mix together the dry and wet ingredients in two separate bowls.
-          Combine the sugar, flour, powdereed sugar, cocoa powder, chocolate
-          chips, and salt in a medium bowl. Then, whisk together the eggs, olive
-          oil, and water in a large one
+          <em>First</em>, mix <i>together</i> the dry and wet ingredients in two
+          separate bowls. Combine the sugar, flour, powdereed sugar, cocoa
+          powder, chocolate chips, and salt in a medium bowl. Then, whisk
+          together the eggs, olive oil, and water in a large one
         </li>
-        <li>Secondly, combine both wet and dry ingredients.</li>
+        <li><b>Secondly</b>, combine both wet and dry ingredients.</li>
       </ul>
+      <h2>Quote:</h2>
+      <p>
+        According to the author,<q
+          >For years, I could not seem to find a recipe for brownies that met my
+          standards.</q
+        >
+      </p>
     </header>
     <nav>
       <!--repeated navigation here, may also move to header-->
