--- a/explanation.html
+++ b/explanation.html
@@ -20,27 +20,26 @@
       <h2>Ingredients</h2>
       <p>
         You will need 2 eggs, water, powdered sugar, unsweetened cocoa powder,
-        canola oil, chocolate chips, granulated sugar, all-purpose flour,
-        saltand vanilla extract
+        canola oil, chocolate chips, granulated sugar, all-purpose flour, salt
+        and vanilla extract
       </p>
+
       <h2>How to Make Brownies from Scratch</h2>
-      <p></p>
       <ul>
         <li>
-          <em>First</em>, mix <i>together</i> the dry and wet ingredients in two
-          separate bowls. Combine the sugar, flour, powdereed sugar, cocoa
-          powder, chocolate chips, and salt in a medium bowl. Then, whisk
-          together the eggs, olive oil, and water in a large one
+          <em>First</em>, mix <i>together</i> the <b>dry and wet</b> ingredients
+          in two separate bowls. Combine the sugar, flour, <s>powdereed</s>
+          <ins>powdered</ins> sugar, cocoa powder, chocolate chips, and salt in
+          a medium bowl. Then, whisk together the eggs, olive oil, and water in
+          a large one
         </li>
         <li><b>Secondly</b>, combine both wet and dry ingredients.</li>
+        <li>
+          <mark>Thirdly</mark>, pour the batter into a 9x13 pan that is lined
+          with parchment paper. Bake at 350<sup>°</sup>F for 25-30 minutes.
+        </li>
       </ul>
-      <h2>Quote:</h2>
-      <p>
-        According to the author,<q
-          >For years, I could not seem to find a recipe for brownies that met my
-          standards.</q
-        >
-      </p>
+      <p><small>Note: Oven temperatures may vary</small></p>
     </header>
     <nav>
       <!--repeated navigation here, may also move to header-->
