--- a/explanation.html
+++ b/explanation.html
@@ -17,26 +17,41 @@
         <abbr title="Fat And Sugar Together">F.A.S.T.</abbr> method to ensure
         your brownies are something everyone will enjoy.
       </p>
+      <h2>Reasons the writer is sharing this</h2>
+      <q
+        >The BEST brownie recipe! With crispy edges, fudgy middles, and rich
+        chocolate flavor, these homeade brownies will disappear in no time</q
+      >
+      <cite>Best Homeade Brownie Recipoe, 2024</cite>
       <h2>Ingredients</h2>
       <p>
         You will need 2 eggs, water, powdered sugar, unsweetened cocoa powder,
         canola oil, chocolate chips, granulated sugar, all-purpose flour, salt
-        and vanilla extract
+        and vanilla extract.
       </p>
 
       <h2>How to Make Brownies from Scratch</h2>
       <ul>
         <li>
-          <em>First</em>, mix <i>together</i> the <b>dry and wet</b> ingredients
-          in two separate bowls. Combine the sugar, flour, <s>powdereed</s>
+          <em><b>First</b></em
+          >, mix <i>together</i> the <b>dry and wet</b> ingredients in two
+          separate bowls. Combine the sugar, flour, <s>powdereed</s>
           <ins>powdered</ins> sugar, cocoa powder, chocolate chips, and salt in
           a medium bowl. Then, whisk together the eggs, olive oil, and water in
           a large one
         </li>
-        <li><b>Secondly</b>, combine both wet and dry ingredients.</li>
         <li>
-          <mark>Thirdly</mark>, pour the batter into a 9x13 pan that is lined
-          with parchment paper. Bake at 350<sup>°</sup>F for 25-30 minutes.
+          <em><b>Secondly</b></em
+          >, combine both wet and dry ingredients.
+        </li>
+        <li>
+          <mark><em>Thirdly</em></mark
+          >, pour the batter into a 9x13 pan that is lined with parchment paper.
+          Bake at 350<sup>°</sup>F for 25-30 minutes.
+        </li>
+        <li>
+          Finally, the wait is over! Let the brownies cool before slicing and
+          serving and then enjoy the dessert!
         </li>
       </ul>
       <p><small>Note: Oven temperatures may vary</small></p>
