Ty Disbro Chapter 2 Project

--- a/explanation.html
+++ b/explanation.html
@@ -22,7 +22,7 @@
         >The BEST brownie recipe! With crispy edges, fudgy middles, and rich
         chocolate flavor, these homeade brownies will disappear in no time</q
       >
-      <cite>Best Homeade Brownie Recipoe, 2024</cite>
+      <cite>Best Homeade Brownie Recipe, 2024</cite>
       <h2>Ingredients</h2>
       <p>
         You will need 2 eggs, water, powdered sugar, unsweetened cocoa powder,
