--- a/programmingquotes.html
+++ b/programmingquotes.html
@@ -12,6 +12,15 @@
         text-align: center;
         text-transform: uppercase;
       }
+      .bold {
+        font-weight: bold;
+      }
+      .italic {
+        font-style: italic;
+      }
+      blockquote .large-type {
+        font-size: larger;
+      }
     </style>
   </head>
   <body>
