--- a/programmingquotes.html
+++ b/programmingquotes.html
@@ -21,6 +21,14 @@
       blockquote .large-type {
         font-size: larger;
       }
+      blockquote {
+        padding: 10px;
+        margin: 10px 50px;
+        border: 5px dashed red;
+        font-family: Helvetica, sans-serif;
+        text-align: justify;
+        background-color: lightyellow;
+      }
     </style>
   </head>
   <body>
