--- a/index.html
+++ b/index.html
@@ -1,29 +1,50 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CIS 119 Spring 2026 - Ty Disbro</title>
-  <link rel="stylesheet" href="styles.css">
-  <script src="scripts.js"></script>
-</head>
-<body>
-  <header>
-    <!--repeated top of page info-->
-    <h1>This is going to be the main page for our CIS 119 course. </h1>
-    Disbro
-  </header>
-  <nav>
-    <!--repeated navigation here, may also move to header-->
-    Nav area
-  </nav>
-  <main>
-    <!--main content goes here-->
-    Main content
-  </main>
-  <footer>
-    <!--repeated bottom of page content goes here-->
-    Footer area
-  </footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CIS 119 Spring 2026 - Ty Disbro</title>
+    <link rel="stylesheet" href="styles.css" />
+    <script src="scripts.js"></script>
+    <style>
+      body {
+        background-color: #1a1a2e;
+        color: #e0e0e0;
+        font-family: Arial, sans-serif;
+      }
+
+      #labs {
+        border: 3px dashed #4fc3f7;
+        border-radius: 12px;
+        padding: 20px;
+        margin: 20px;
+      }
+
+      #homework {
+        border: 3px dotted #81c784;
+        border-radius: 12px;
+        padding: 20px;
+        margin: 20px;
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <h1>This is going to be the main page for our CIS 119 course.</h1>
+      Disbro
+    </header>
+    <nav>Nav area</nav>
+    <main>
+      <div id="labs">
+        <h2>Labs</h2>
+        <!-- Lab content goes here -->
+      </div>
+
+      <div id="homework">
+        <h2>Homework</h2>
+        <!-- Homework content goes here -->
+      </div>
+    </main>
+    <footer>Footer area</footer>
+  </body>
 </html>
