--- a/index.html
+++ b/index.html
@@ -37,12 +37,21 @@
     <main>
       <div id="labs">
         <h2>Labs</h2>
-        <!-- Lab content goes here -->
+        <p>
+          <a href="https://TyDisbro235.github.io/explanation.html"
+            >Explanation Project</a
+          >
+        </p>
       </div>
 
       <div id="homework">
         <h2>Homework</h2>
-        <!-- Homework content goes here -->
+        <p>
+          <a href="https://TyDisbro235.github.io/programmingquotes.html"
+            >Programming Quotes</a
+          >
+        </p>
+        <p><a href="https://TyDisbro235.github.io/index.html">Index</a></p>
       </div>
     </main>
     <footer>Footer area</footer>
