--- a/pope.html
+++ b/pope.html
@@ -30,22 +30,8 @@
 
       article {
         background-color: #fdf9e3;
-        padding: 0 30px 20px 30px;
-      }
-
-      section {
-        margin-bottom: 10px;
-      }
-
-      section h3 {
-        background-color: #8eaed4;
-        color: #fff;
-        font-style: italic;
-        padding: 5px 10px;
-        margin: 0 0 10px 0;
-        display: inline-block;
-        width: 100%;
-        box-sizing: border-box;
+        padding: 10px 30px 20px 30px;
+        overflow: hidden;
       }
 
       aside {
@@ -62,9 +48,23 @@
         display: block;
       }
 
+      section {
+        margin-bottom: 10px;
+      }
+
+      section h3 {
+        background-color: #8eaed4;
+        color: #fff;
+        font-style: italic;
+        padding: 5px 10px;
+        margin: 0 0 10px 0;
+        display: block;
+      }
+
       ul {
         list-style-type: circle;
         padding-left: 30px;
+        margin-top: 5px;
       }
 
       ul li {
@@ -75,7 +75,6 @@
         clear: both;
         padding: 10px 30px;
         background-color: #fdf9e3;
-        border-top: 1px solid #ccc;
       }
 
       footer a {
@@ -97,7 +96,7 @@
     <article>
       <aside>
         <figure>
-          <img src="popefrancis.png" alt="Pope Francis waving to crowd" />
+          <img src="pope_francis.png" alt="Pope Francis waving to crowd" />
         </figure>
       </aside>
 
