--- a/pope.html
+++ b/pope.html
@@ -96,7 +96,7 @@
     <article>
       <aside>
         <figure>
-          <img src="pope_francis.png" alt="Pope Francis waving to crowd" />
+          <img src="popefrancis.png" alt="Pope Francis waving to crowd" />
         </figure>
       </aside>
 
