--- a/pope.html
+++ b/pope.html
@@ -26,6 +26,10 @@
       header h2 {
         font-size: 1.1em;
         font-weight: bold;
+        font-family:
+          Arial Narrow,
+          Arial,
+          sans-serif;
       }
 
       article {
@@ -55,7 +59,7 @@
       section h3 {
         background-color: #8eaed4;
         color: #fff;
-        font-style: italic;
+        font-style: normal;
         padding: 5px 10px;
         margin: 0 0 10px 0;
         display: block;
