--- a/pope.html
+++ b/pope.html
@@ -26,10 +26,9 @@
       header h2 {
         font-size: 1.1em;
         font-weight: bold;
-        font-family:
-          Arial Narrow,
-          Arial,
-          sans-serif;
+        font-family: Georgia, serif;
+        margin: 0;
+        line-height: 1.2;
       }
 
       article {
@@ -100,7 +99,7 @@
     <article>
       <aside>
         <figure>
-          <img src="popefrancis.png" alt="Pope Francis waving to crowd" />
+          <img src="pope_francis.png" alt="Pope Francis waving to crowd" />
         </figure>
       </aside>
 
