--- a/pope.html
+++ b/pope.html
@@ -6,7 +6,7 @@
     <style>
       body {
         font-family: Georgia, serif;
-        margin: 0;
+        margin: 20px;
         background: #fff;
       }
 
@@ -99,7 +99,7 @@
     <article>
       <aside>
         <figure>
-          <img src="popefrancis.png" alt="Pope Francis waving to crowd" />
+          <img src="pope_francis.png" alt="Pope Francis waving to crowd" />
         </figure>
       </aside>
 
