--- a/pope.html
+++ b/pope.html
@@ -6,8 +6,13 @@
     <style>
       body {
         font-family: Georgia, serif;
-        margin: 20px;
-        background: #fff;
+        margin: 0;
+        background-color: #fdf9e3;
+      }
+
+      #container {
+        max-width: 900px;
+        margin: 30px auto;
       }
 
       header {
@@ -86,52 +91,54 @@
     </style>
   </head>
   <body>
-    <header>
-      <h1>Pope Francis I</h1>
-      <h2>
-        Bishop of Rome, Vicar of Jesus Christ, Successor of the Prince of the
-        Apostles, Supreme Pontiff of the Universal Church, Primate of Italy,
-        Archbishop and Metropolitan of the Roman Province, Sovereign of the
-        State of Vatican City, Servant of the Servants of God.
-      </h2>
-    </header>
+    <div id="container">
+      <header>
+        <h1>Pope Francis I</h1>
+        <h2>
+          Bishop of Rome, Vicar of Jesus Christ, Successor of the Prince of the
+          Apostles, Supreme Pontiff of the Universal Church, Primate of Italy,
+          Archbishop and Metropolitan of the Roman Province, Sovereign of the
+          State of Vatican City, Servant of the Servants of God.
+        </h2>
+      </header>
 
-    <article>
-      <aside>
-        <figure>
-          <img src="popefrancis.png" alt="Pope Francis waving to crowd" />
-        </figure>
-      </aside>
+      <article>
+        <aside>
+          <figure>
+            <img src="popefrancis.png" alt="Pope Francis waving to crowd" />
+          </figure>
+        </aside>
 
-      <section>
-        <h3>Quotes:</h3>
-        <ul>
-          <li>"We all have the duty to do good."</li>
-          <li>"Money must serve, not rule."</li>
-          <li>"I am a sinner."</li>
-          <li>
-            "Working for a just distribution of wealth is not mere philanthropy.
-            It is a moral obligation."
-          </li>
-        </ul>
-      </section>
+        <section>
+          <h3>Quotes:</h3>
+          <ul>
+            <li>"We all have the duty to do good."</li>
+            <li>"Money must serve, not rule."</li>
+            <li>"I am a sinner."</li>
+            <li>
+              "Working for a just distribution of wealth is not mere
+              philanthropy. It is a moral obligation."
+            </li>
+          </ul>
+        </section>
 
-      <section>
-        <h3>Interesting facts:</h3>
-        <ul>
-          <li>Worked as a bar bouncer to pay for college.</li>
-          <li>Washes feet of incarcerated women.</li>
-          <li>Lives in a small apartment behind a gas station.</li>
-          <li>Orders Domino's take-out every Thursday.</li>
-        </ul>
-      </section>
-    </article>
+        <section>
+          <h3>Interesting facts:</h3>
+          <ul>
+            <li>Worked as a bar bouncer to pay for college.</li>
+            <li>Washes feet of incarcerated women.</li>
+            <li>Lives in a small apartment behind a gas station.</li>
+            <li>Orders Domino's take-out every Thursday.</li>
+          </ul>
+        </section>
+      </article>
 
-    <footer>
-      <p>
-        Report problems to the webmaster at
-        <a href="mailto:benedictxvi@vatican.va">benedictxvi@vatican.va</a>
-      </p>
-    </footer>
+      <footer>
+        <p>
+          Report problems to the webmaster at
+          <a href="mailto:benedictxvi@vatican.va">benedictxvi@vatican.va</a>
+        </p>
+      </footer>
+    </div>
   </body>
 </html>
