--- a/pope.html
+++ b/pope.html
@@ -7,12 +7,7 @@
       body {
         font-family: Georgia, serif;
         margin: 0;
-        background-color: #fdf9e3;
-      }
-
-      #container {
-        max-width: 900px;
-        margin: 30px auto;
+        background: #fff;
       }
 
       header {
@@ -44,7 +39,7 @@
 
       aside {
         float: right;
-        margin: 0 0 10px 20px;
+        margin: 20px 0 10px 20px;
       }
 
       aside figure {
@@ -91,54 +86,52 @@
     </style>
   </head>
   <body>
-    <div id="container">
-      <header>
-        <h1>Pope Francis I</h1>
-        <h2>
-          Bishop of Rome, Vicar of Jesus Christ, Successor of the Prince of the
-          Apostles, Supreme Pontiff of the Universal Church, Primate of Italy,
-          Archbishop and Metropolitan of the Roman Province, Sovereign of the
-          State of Vatican City, Servant of the Servants of God.
-        </h2>
-      </header>
+    <header>
+      <h1>Pope Francis I</h1>
+      <h2>
+        Bishop of Rome, Vicar of Jesus Christ, Successor of the Prince of the
+        Apostles, Supreme Pontiff of the Universal Church, Primate of Italy,
+        Archbishop and Metropolitan of the Roman Province, Sovereign of the
+        State of Vatican City, Servant of the Servants of God.
+      </h2>
+    </header>
 
-      <article>
-        <aside>
-          <figure>
-            <img src="popefrancis.png" alt="Pope Francis waving to crowd" />
-          </figure>
-        </aside>
+    <article>
+      <aside>
+        <figure>
+          <img src="popefrancis.png" alt="Pope Francis waving to crowd" />
+        </figure>
+      </aside>
 
-        <section>
-          <h3>Quotes:</h3>
-          <ul>
-            <li>"We all have the duty to do good."</li>
-            <li>"Money must serve, not rule."</li>
-            <li>"I am a sinner."</li>
-            <li>
-              "Working for a just distribution of wealth is not mere
-              philanthropy. It is a moral obligation."
-            </li>
-          </ul>
-        </section>
+      <section>
+        <h3>Quotes:</h3>
+        <ul>
+          <li>"We all have the duty to do good."</li>
+          <li>"Money must serve, not rule."</li>
+          <li>"I am a sinner."</li>
+          <li>
+            "Working for a just distribution of wealth is not mere philanthropy.
+            It is a moral obligation."
+          </li>
+        </ul>
+      </section>
 
-        <section>
-          <h3>Interesting facts:</h3>
-          <ul>
-            <li>Worked as a bar bouncer to pay for college.</li>
-            <li>Washes feet of incarcerated women.</li>
-            <li>Lives in a small apartment behind a gas station.</li>
-            <li>Orders Domino's take-out every Thursday.</li>
-          </ul>
-        </section>
-      </article>
+      <section>
+        <h3>Interesting facts:</h3>
+        <ul>
+          <li>Worked as a bar bouncer to pay for college.</li>
+          <li>Washes feet of incarcerated women.</li>
+          <li>Lives in a small apartment behind a gas station.</li>
+          <li>Orders Domino's take-out every Thursday.</li>
+        </ul>
+      </section>
+    </article>
 
-      <footer>
-        <p>
-          Report problems to the webmaster at
-          <a href="mailto:benedictxvi@vatican.va">benedictxvi@vatican.va</a>
-        </p>
-      </footer>
-    </div>
+    <footer>
+      <p>
+        Report problems to the webmaster at
+        <a href="mailto:benedictxvi@vatican.va">benedictxvi@vatican.va</a>
+      </p>
+    </footer>
   </body>
 </html>
