--- a/pope.html
+++ b/pope.html
@@ -7,7 +7,7 @@
       body {
         font-family: Georgia, serif;
         margin: 0;
-        background: #fff;
+        background: #fdf9e3;
       }
 
       header {
@@ -29,6 +29,7 @@
         font-family: Georgia, serif;
         margin: 0;
         line-height: 1.2;
+        max-width: 600px;
       }
 
       article {
