--- a/pope.html
+++ b/pope.html
@@ -13,6 +13,7 @@
       header {
         background-color: #d6e4f0;
         padding: 20px 30px 15px 30px;
+        margin: 20px;
       }
 
       header * {
@@ -29,7 +30,7 @@
         font-family: Georgia, serif;
         margin: 0;
         line-height: 1.2;
-        max-width: 600px;
+        max-width: 420px;
       }
 
       article {
