--- a/pope.html
+++ b/pope.html
@@ -30,7 +30,7 @@
         font-family: Georgia, serif;
         margin: 0;
         line-height: 1.2;
-        max-width: 420px;
+        max-width: 680px;
       }
 
       article {
@@ -101,7 +101,7 @@
     <article>
       <aside>
         <figure>
-          <img src="popefrancis.png" alt="Pope Francis waving to crowd" />
+          <img src="pope_francis.png" alt="Pope Francis waving to crowd" />
         </figure>
       </aside>
 
